Camel: Filtering Search folder leaves changed messages in the result
Evolution-3.42.4
Hello,
I have a Search folder as configured below. If I do a search in that Search folder using the quick Search: bar, using "Body contains", it leaves some mails in the result that are not matching the filter. For instance if the correct result is 3 messages, I still see 5 messages with 2 that I had opened before. In order to repair the result I need to switch to another Search folder and back to the filtered one. That cleans out the bad residuals and shows the correct filter result.
The used Search Folder is a nested Search Folder, using another Search folder.
Search Folders
10 weeks
any of the following conditions
Include threads: None
Date received is after 10 weeks ago
Date sent is after 10 weeks ago
[x] Automatically update...
Specific folders:
Search Folders: "All" [ ] include subfolders
All
any of the following conditions
Include threads: None
Match All
[x] Automatically update...
Specific folders:
MyImap: INBOX [ ] include subfolders
MyImap: Sent [ ] include subfolders