I#488 - Camel: Filtering Search folder leaves changed messages in the result

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/-/issues/488